<resources>
    <string name="app_name">JadwalSholatNeo</string>
    <string name="imsak">Imsak</string>
    <string name="subuh">Subuh</string>
    <string name="djuhur">Djuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string-array name="aktifitas_todo">
        <item>Medan</item>
        <item>Jakarta</item>
        <item>Bandung</item>
    </string-array>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
