<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jadwal.shalat.neo.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:id="@+id/imageView"
         />
    <Spinner
        android:id="@+id/aktifitas_todo"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="48dp"
        android:entries="@array/aktifitas_todo"/>
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:id="@+id/imageView2" />
</LinearLayout>
    <View
        android:id="@+id/lineBar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@android:color/darker_gray">
        <TextView
            android:id="@+id/txtImsak"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/imsak"
            android:gravity="center_vertical"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/txtImsakTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:text="04:32"
            android:onClick="setTimeImsak"
            android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            >
        <ToggleButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_volume_off_black_24dp"
            android:id="@+id/imageImsak"
            android:onClick="OnToggleClickedImsak"
            android:textOn=""
            android:textOff=""/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@android:color/darker_gray">
            <TextView
                android:id="@+id/txtSubuh"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/subuh"
                android:gravity="center_vertical"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/txtSubuhTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:text="06:01"
                android:onClick="setTimeSubuh"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            >
            <ToggleButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_volume_off_black_24dp"
                android:id="@+id/imageSubuh"
                android:onClick="OnToggleClickedSubuh"
                android:textOn=""
                android:textOff=""/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@android:color/darker_gray">
            <TextView
                android:id="@+id/txtDjuhur"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/djuhur"
                android:gravity="center_vertical"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/txtDjuhurTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:text="11:57"
                android:onClick="setTimeDjuhur"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            >
            <ToggleButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_volume_off_black_24dp"
                android:id="@+id/imageDjuhur"
                android:onClick="OnToggleClickedDjuhur"
                android:textOn=""
                android:textOff=""/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@android:color/darker_gray">
            <TextView
                android:id="@+id/txtAshar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/ashar"
                android:gravity="center_vertical"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/txtAsharTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:text="15:19"
                android:onClick="setTimeAshar"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            >
            <ToggleButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_volume_off_black_24dp"
                android:id="@+id/imageAshar"
                android:onClick="OnToggleClickedAshar"
                android:textOn=""
                android:textOff=""/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            >
            <ToggleButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_volume_off_black_24dp"
                android:id="@+id/imageMaghrib"
                android:onClick="OnToggleClickedMaghrib"
                android:textOn=""
                android:textOff=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@android:color/darker_gray"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/txtMaghrib"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/maghrib"
                android:gravity="center_vertical"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/txtMaghribTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:text="17:51"
                android:onClick="setTimeMaghrib"
                android:textSize="24sp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@android:color/darker_gray">
            <TextView
                android:id="@+id/txtIsya"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/isya"
                android:gravity="center_vertical"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/txtIsyaTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:text="04:32"
                android:onClick="setTimeIsya"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            >
            <ToggleButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_volume_off_black_24dp"
                android:id="@+id/imageIsya"
                android:onClick="OnToggleClickedIsya"
                android:textOn=""
                android:textOff=""/>
        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>
    <!--menambahkan elemen AdView untuk menampilkan iklan/ads-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
